vlib/v/checker/tests/struct_field_fixed_size_init_with_d_as_size_err.vv
struct Gin {
mut:
	juice [$d('amount', 4)]int = [1, 2, 3, 4]!
}

fn main() {}
